--- a/notebooks/test1.ipynb
+++ b/notebooks/test1.ipynb
@@ -49,7 +49,7 @@
    ],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv(r'C:\\Users\\manar\\OneDrive\\Documents\\ENIT\\Big-D\\MachineLearningCSV\\MachineLearningCVE\\Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv')\n",
+    "df = pd.read_csv(r'MachineLearningCVE\\Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv')\n",
     "\n",
     "print(f\"Dataset shape: {df.shape}\")\n",
     "print(f\"Total rows: {df.shape[0]:,}\")\n",
