--- a/notebooks/test2.ipynb
+++ b/notebooks/test2.ipynb
@@ -49,7 +49,7 @@
    ],
    "source": [
     "#Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv\n",
-    "df = pd.read_csv(r'C:\\Users\\manar\\OneDrive\\Documents\\ENIT\\Big-D\\MachineLearningCSV\\MachineLearningCVE\\Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv')\n",
+    "df = pd.read_csv(r'Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX.csv')\n",
     "\n",
     "print(f\"Dataset shape: {df.shape}\")\n",
     "print(f\"Total rows: {df.shape[0]:,}\")\n",
@@ -704,7 +704,7 @@
    ],
    "source": [
     "#Friday-WorkingHours-Morning.pcap_ISCX.csv\n",
-    "df1 = pd.read_csv(r'C:\\Users\\manar\\OneDrive\\Documents\\ENIT\\Big-D\\MachineLearningCSV\\MachineLearningCVE\\Friday-WorkingHours-Morning.pcap_ISCX.csv')\n",
+    "df1 = pd.read_csv(r'Friday-WorkingHours-Morning.pcap_ISCX.csv')\n",
     "\n",
     "print(f\"Dataset shape: {df1.shape}\")\n",
     "print(f\"Total rows: {df1.shape[0]:,}\")\n",
